Closed Bug 36924 Opened 25 years ago Closed 25 years ago

beos build broken

Categories

(Core Graveyard :: Plug-ins, defect, P3)

x86
BeOS
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: justin, Assigned: ykoehler)

Details

Attachments

(2 files)

adding support for legacy plugins to nsPluginsDirUNIX.cpp (which the beos also uses) broke the beos build. attached is a patch to fix the problem - it creates a beos-specific nsPluginsDirBeOS.cpp (which is basically nsPluginsDirUNIX.cpp v1.12 renamed), and modifies the Makefile to choose the proper file at buildtime.
Keywords: patch
Attached patch correct patchSplinter Review
the patch i first submitted didn't work (nsPluginsDirBeOS.o was included in the link, but nsPluginsDirBeOS.cpp was never compiled). the second attachment is a corrected version of the same patch.
To my knowledge Netscape does not officially support BeOS project. I think this this bug should be owned by someone who maintains the BeOS project. Reassigning to koehler@mythrium.com as I found this name on mozilla.org page.
Assignee: av → koehler
This patch as a "NEW" file in it, nsPluginsDirBeOS.cpp. This will require a cvs add on this file. As I can't check in stuff yet I've re-assigned the bug to av@netscape.com
Please be aware that some code was not written clean. If you look at nsPluginFile::GetPluginInfo close to the bottom of the file you'll see something like: info.fMimeType = mtype ? mtype : (char *)""; I beleive this is obviously bad since we allocate something (an empty string) on the stack and than return a pointer to it to the outside world.
the code you site is actually ok: the "" isn't allocated on the stack, but somewhere in the app's data segment, so it actually doesn't go out of scope when the function returns. note that such strings are also write-protected, so if someone tries to modify the "", there'll be a segment violation (making it easy to find/fix the culprit) the code isn't clean, though. it does leak memory (specifically, nsPluginFile::FreePluginInfo() doesn't free any of the stuff allocated in GetPluginInfo()). we will fix this. at the moment, though, we just need to get these changes checked in, so the beos version of mozilla can at least compile... (remember, too, that we didn't write this code - it is just nsPluginsDirUNIX.cpp with a new name)
Patch has been checked in. If the problem is build bustage, then you can assign it to me. (Otherwise I'll just have to hunt them down myself.)
Status: UNCONFIRMED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
the patch fixed the build - thanks!
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: