Build fixes for BeOS. Bug 36924 & bug 36926. Thanks to Justin Morey <justin@68k.org> for the patches.